# voice

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  release-please-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  pr-title-lint.yml  release-please.yml  release.yml
docs/superpowers/specs/: 2026-05-24-voice-plan.md  2026-05-24-voice-v0-design.md  2026-05-25-voice-parallel-gen-design.md
specs/: 2026-05-29-8-chore-bump-actions-upload.md
